<resources>
    <string name="app_name">Magaza Otomasyon</string>
    <string name="header">Header</string>
    <string name="menu">Menü</string>
    <string name="add_product">Ürün Ekle</string>
    <string name="delete_product">Ürün Sil</string>
    <string name="update_product">Ürün Güncelle</string>
    <string name="add">Ekle</string>

    <string name="update">Güncelle</string>

    <string name="delete">Sil</string>
    <string name="product_id">Ürün ID</string>

    <string name="product_type">Ürün Türü</string>
    <string name="product_size">Beden</string>
    <string name="product_name">Ürün Adı</string>
    <string name="product_color">Renk</string>
    <string name="product_view">Görüntüle</string>

</resources>
