<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorThird"
     tools:context=".MainActivity">





     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_begin="55dp" />

     <ImageView
         android:id="@+id/imageView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:contentDescription="@string/header"
         app:srcCompat="@color/colorFirst" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="86dp"
        android:layout_height="47dp"
        android:text="@string/menu"
        android:textColor="@color/colorThird"
        android:textSize="32sp"
        app:autoSizeMaxTextSize="32dp"
        app:autoSizeMinTextSize="32dp"
        app:fontFamily="@font/titillium_web"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.615" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="100dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/menu_btn_AddProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:text="@string/add_product"
            app:fontFamily="@font/titillium_web"
            android:textColor="@color/colorFirst"
            android:textSize="18sp"

            />

        <Button
            android:id="@+id/menu_btn_DeleteProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:fontFamily="@font/titillium_web"
            android:background="@drawable/buttonshape"
            android:text="@string/delete_product"
            android:textColor="@color/colorFirst"
            android:textSize="18sp" />

        <Button
            android:id="@+id/menu_btn_UpdateProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:fontFamily="@font/titillium_web"
            android:background="@drawable/buttonshape"
            android:text="@string/update_product"
            android:textColor="@color/colorFirst"
            android:textSize="18sp" />
        <Button
            android:id="@+id/menu_btn_ViewProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:fontFamily="@font/titillium_web"
            android:background="@drawable/buttonshape"
            android:text="@string/product_view"
            android:textColor="@color/colorFirst"
            android:textSize="18sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>